Fix pageContentContainer width (that probably changed when we changed the "default" spacing

--- a/src/RX.Nyss.Web/ClientApp/src/components/layout/Layout.module.scss
+++ b/src/RX.Nyss.Web/ClientApp/src/components/layout/Layout.module.scss
@@ -19,7 +19,7 @@
         overflow-y: auto;
 
         @media screen and (max-width: 1919px) {
-          max-width: calc(100vw - 260px);
+          max-width: calc(100vw - 220px);
         }
 
         @media screen and (max-width: 1279px) {
